update version in package

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clean-blog",
   "title": "Clean Blog",
-  "version": "1.0.x",
+  "version": "1.0.5",
   "homepage": "http://startbootstrap.com/template-overviews/clean-blog",
   "author": "Start Bootstrap",
   "license": {
