--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "gulp": "3.9.1",
     "gulp-bower": "^0.0.13",
-    "gulp-sass": "^2.2.0"
+    "gulp-sass": "^2.2.0",
+    "gulp-minify-css": "1.2.3",
+    "gulp-rename": "1.2.2"
   },
   "repository": {
     "type": "git",
