--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Clean Blog",
   "name": "startbootstrap-clean-blog",
-  "version": "4.0.0-alpha",
+  "version": "4.0.0-beta",
   "description": "Clean Blog is a Medium inspired blog theme for Bootstrap.",
   "keywords": [
     "css",
