HTTPS for package.json homepage link

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "theme",
     "template"
   ],
-  "homepage": "http://startbootstrap.com/template-overviews/clean-blog",
+  "homepage": "https://startbootstrap.com/template-overviews/clean-blog",
   "bugs": {
     "url": "https://github.com/BlackrockDigital/startbootstrap-clean-blog/issues",
     "email": "feedback@startbootstrap.com"
