--- a/ansible/playbooks/files/daniellas.tech.conf
+++ b/ansible/playbooks/files/daniellas.tech.conf
@@ -1,20 +1,21 @@
 server {
-  root                /usr/share/nginx/daniellas.tech;
   listen              80;
   listen              443 ssl http2;
   server_name         daniellas.tech;
   ssl_certificate     /etc/letsencrypt/live/daniellas.tech/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/daniellas.tech/privkey.pem;
+  return 301 https://www.daniellas.tech$request_uri;
+}
 
-  #location /robots.txt {
-  #  alias /usr/share/nginx/html/robots.txt;
-  #}
-
-  #location /sitemap.xml {
-  #  alias /usr/share/nginx/html/sitemap.xml;
-  #}
+server {
+  listen              80;
+  listen              443 ssl http2;
+  server_name         www.daniellas.tech;
+  ssl_certificate     /etc/letsencrypt/live/www.daniellas.tech/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/www.daniellas.tech/privkey.pem;
 
   location / {
+    root                /usr/share/nginx/daniellas.tech;
     if ($scheme = http) {
       return 301 https://$host$request_uri;
     }
