--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.3.1",
         "bootstrap": "4.1.3",
-        "jquery": "3.3.1"
+        "jquery": "3.3.1",
+        "natives": "^1.1.6",
+        "node-sass": "^4.11.0"
     },
     "devDependencies": {
-        "browser-sync": "2.24.7",
+        "browser-sync": "^2.26.3",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "6.0.0",
         "gulp-clean-css": "3.10.0",
