--- a/ansible/playbooks/files/daniellas.tech.conf
+++ b/ansible/playbooks/files/daniellas.tech.conf
@@ -7,12 +7,22 @@ server {
   return 301 https://www.daniellas.tech$request_uri;
 }
 
+map $sent_http_content_type $expires {
+  default                    off;
+  text/html                  epoch;
+  text/css                   max;
+  application/javascript     max;
+  application/octet-stream	 max;
+  ~image/                    max;
+}
+
 server {
   listen              80;
   listen              443 ssl http2;
   server_name         www.daniellas.tech;
   ssl_certificate     /etc/letsencrypt/live/www.daniellas.tech/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/www.daniellas.tech/privkey.pem;
+  expires $expires;
 
   location / {
     root                /usr/share/nginx/daniellas.tech;
