--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "title": "Clean Blog",
     "name": "startbootstrap-clean-blog",
-    "version": "5.0.5",
+    "version": "5.0.6",
     "scripts": {
         "start": "gulp watch"
     },
@@ -44,6 +44,6 @@
         "gulp-rename": "1.4.0",
         "gulp-sass": "4.0.2",
         "gulp-uglify": "3.0.2",
-        "merge-stream": "^1.0.1"
+        "merge-stream": "2.0.0"
     }
 }
