--- a/ansible/playbooks/daniellas.tech.publish.yml
+++ b/ansible/playbooks/daniellas.tech.publish.yml
@@ -25,6 +25,7 @@
       - { src: '../../img', dest: '' }
       - { src: '../../js', dest: '' }
       - { src: '../../src', dest: '' }
+      - { src: '../../data', dest: '' }
       - { src: '../../vendor/fontawesome-free/css/all.min.css', dest: 'vendor/fontawesome-free/css' }
       - { src: '../../vendor/fontawesome-free/webfonts', dest: 'vendor/fontawesome-free' }
       
