--- a/ansible/playbooks/files/daniellas.tech.conf
+++ b/ansible/playbooks/files/daniellas.tech.conf
@@ -10,6 +10,7 @@ server {
 map $sent_http_content_type $expires {
   default                    off;
   text/html                  epoch;
+  application/json			 epoch;
   text/css                   max;
   application/javascript     max;
   application/octet-stream	 max;
