--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.10.2",
         "bootstrap": "4.3.1",
+        "express": "^4.17.1",
         "jquery": "3.4.1"
     },
     "devDependencies": {
