--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.10.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "4.3.1",
     "express": "^4.17.1",
     "express-edge": "^2.0.1",
