--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "express-edge": "^2.0.1",
     "jquery": "3.4.1",
     "mongoose": "^5.7.6",
-    "popper.js": "^1.14.7"
+    "popper.js": "^1.14.7",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "browser-sync": "2.26.7",
