--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "4.3.1",
     "express": "^4.17.1",
     "express-edge": "^2.0.1",
+    "express-fileupload": "^1.1.6-alpha.6",
     "jquery": "3.4.1",
     "mongoose": "^5.7.6",
     "popper.js": "^1.14.7",
