--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "6.0.0",
         "gulp-clean-css": "3.10.0",
+        "gulp-data": "^1.3.1",
         "gulp-header": "2.0.5",
         "gulp-nunjucks-render": "^2.2.3",
         "gulp-rename": "1.4.0",
