--- a/package.json
+++ b/package.json
@@ -3,14 +3,9 @@
     "name": "startbootstrap-clean-blog",
     "version": "6.0.9",
     "scripts": {
-        "build": "npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets",
-        "build:assets": "node scripts/build-assets.js",
-        "build:pug": "node scripts/build-pug.js",
-        "build:scripts": "node scripts/build-scripts.js",
-        "build:scss": "node scripts/build-scss.js",
-        "clean": "node scripts/clean.js",
-        "start": "npm run build && node scripts/start.js",
-        "start:debug": "npm run build && node scripts/start-debug.js"
+        "build": "cross-env NODE_ENV=production node metalsmith",
+        "start": "cross-env NODE_ENV=development node metalsmith && serve -l 5000 dist",
+        "start:debug": "cross-env NODE_ENV=development DEBUG=* node metalsmith && serve -l 5000 dist"
     },
     "description": "Clean Blog is a Medium inspired blog theme for Bootstrap.",
     "keywords": [
@@ -39,15 +34,20 @@
         "bootstrap": "5.2.3"
     },
     "devDependencies": {
+        "@metalsmith/collections": "^1.2.1",
+        "@metalsmith/drafts": "^1.1.1",
+        "@metalsmith/layouts": "^2.4.0",
+        "@metalsmith/markdown": "^1.4.0",
+        "@metalsmith/postcss": "^5.0.0",
+        "@metalsmith/sass": "^1.0.0",
         "autoprefixer": "10.4.14",
         "browser-sync": "2.29.1",
-        "chokidar": "3.5.3",
-        "concurrently": "6.3.0",
+        "cross-env": "^7.0.3",
+        "cssnano": "^5.0.17",
+        "jstransformer-pug": "^0.4.0",
+        "metalsmith": "^2.4.2",
         "postcss": "8.4.21",
         "prettier": "2.8.6",
-        "pug": "3.0.2",
-        "sass": "1.60.0",
-        "shelljs": "0.8.5",
-        "upath": "2.0.1"
+        "serve": "^13.0.2"
     }
 }
