--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+      is_post: true # automatically set is_post=true for all posts
   - scope:
       path: ""
     values:
