--- a/_config.yml
+++ b/_config.yml
@@ -20,4 +20,8 @@ defaults:
     values:
       layout: "default"
 
+# Tags (This tells Jekyll to generate a new directory called tag and place tag pages in that directory.)
+tag_page_dir: tag
+
+
 timezone: America/Denver
