--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
             "url": "/#posts",
             "icons": [
                 {
-                    "src": "/icons/play-later.png",
+                    "src": "/assets/images/icons/clock-rotate-left-solid.svg",
                     "sizes": "192x192"
                 }
             ]
@@ -38,7 +38,7 @@
             "url": "/archive/date.html",
             "icons": [
                 {
-                    "src": "/icons/subscriptions.png",
+                    "src": "/assets/images/icons/calendar-regular.svg",
                     "sizes": "192x192"
                 }
             ]
@@ -47,10 +47,10 @@
             "name": "Archive by Title",
             "short_name": "Archive by Title",
             "description": "View a list of all posts sorted alphabetically by title",
-            "url": "/archive/title.html",
+            "url": "/assets/images/icons/a-solid.svg",
             "icons": [
                 {
-                    "src": "/icons/subscriptions.png",
+                    "src": "",
                     "sizes": "192x192"
                 }
             ]
