--- a/manifest.json
+++ b/manifest.json
@@ -47,10 +47,10 @@
             "name": "Archive by Title",
             "short_name": "Archive by Title",
             "description": "View a list of all posts sorted alphabetically by title",
-            "url": "/assets/images/icons/a-solid.svg",
+            "url": "/archive/title.html",
             "icons": [
                 {
-                    "src": "",
+                    "src": "/assets/images/icons/a-solid.svg",
                     "sizes": "192x192"
                 }
             ]
