--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 - name: Home
   link: /
+- name: Thought Bites
+  link: /thought-bites.html
 - name: Archive
   link: /archive.html
 - name: Contributors
