--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+title: The Love of God and of All Men
+
 collections:
   authors:
     output: true
@@ -22,7 +24,7 @@ defaults:
     values:
       layout: "default"
 
+# Other variables
 # Tags (This tells Jekyll to generate a new directory called tag and place tag pages in that directory.)
 tag_page_dir: tag
-
 timezone: America/Denver
