--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "background_color": "#ffffff",
   "description": "Doing my best to spread God's love to everyone",
   "dir": "ltr",
-  "display": "standalone",
+  "display": "minimal-ui",
   "name": "The Love of God and of All Men",
   "orientation": "any",
   "scope": "/",
