--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "name": "The Love of God and of All Men",
   "orientation": "any",
   "scope": "/",
-  "short_name": "The Love of God and of All Men",
+  "short_name": "Love",
   "start_url": "/",
   "theme_color": "#FFFFFF",
   "categories": [
