adding one more icon

--- a/assets/pwa/manifest.json
+++ b/assets/pwa/manifest.json
@@ -36,7 +36,13 @@
     {
       "name": "View the Newest Post",
       "url": "https://love-of-god-and-of-all-men.github.io/newest-post.html",
-      "description": ""
+      "description": "",
+      "icons": [
+        {
+          "src": "/book.png",
+          "sizes": "512x512"
+        }
+      ]
     },
     {
       "name": "View Thought Bites",
