Revert "adding one more icon"
This reverts commit 0bbc827a27ab4af07cd724ca0f3194f6afb640fe.

--- a/assets/pwa/manifest.json
+++ b/assets/pwa/manifest.json
@@ -36,13 +36,7 @@
     {
       "name": "View the Newest Post",
       "url": "https://love-of-god-and-of-all-men.github.io/newest-post.html",
-      "description": "",
-      "icons": [
-        {
-          "src": "/book.png",
-          "sizes": "512x512"
-        }
-      ]
+      "description": ""
     },
     {
       "name": "View Thought Bites",
