add: portfolio image

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,4 @@
 name: GeekyRakshit
 tagline: Machine Learning Engineer
 bg-image: ../assets/images/home-bg.jpg
+portfolio-image: ../assets/images/geekyrakshit.png
