--- a/templates/index.html.template
+++ b/templates/index.html.template
@@ -48,6 +48,16 @@
                 </div>
             </div>
         </header>
+        <!-- Main Content -->
+        <article class="mb-4">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        { landing-page-content }
+                    </div>
+                </div>
+            </div>
+        </article>
         
         <!-- Footer-->
         <footer class="border-top">
