update: md-content key from configs + special logic for portfolio image

--- a/config.yaml
+++ b/config.yaml
@@ -2,4 +2,4 @@ name: GeekyRakshit
 tagline: Machine Learning Engineer
 bg-image: home-bg.jpg
 portfolio-image: geekyrakshit.png
-landing-page-content: landing-page-content.md
+md-content: landing-page-content.md
