--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "description": "Doing my best to spread God's love to everyone",
   "dir": "ltr",
   "display": "standalone",
-  "name": "The Love of God and of All Men",
+  "name": "Sharing His Love",
   "orientation": "any",
   "scope": "/",
   "short_name": "Love",
