--- a/manifest.json
+++ b/manifest.json
@@ -40,7 +40,7 @@ layout: none
     {
       "name": "View the Newest Post",
       {% for post in site.posts limit:1 %}
-      "url": "https://love-of-god-and-of-all-men.github.io/newest-post.html",
+      "url": "{{ post.url }}",
       {% endfor %}
       "description": "",
       "icons": [
