testing maskable icons

--- a/manifest.json
+++ b/manifest.json
@@ -34,6 +34,10 @@ layout: none
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any"
+    },
+    {
+      "src": "/maskable-1080x1080.png",
+      "sizes": "1080x1080", "purpose": "maskable"
     }
   ],
   "shortcuts": [
