--- a/_config.yml
+++ b/_config.yml
@@ -26,5 +26,5 @@ defaults:
 
 # Other variables
 # Tags (This tells Jekyll to generate a new directory called tag and place tag pages in that directory.)
-tag_page_dir: tag
+# tag_page_dir: tag
 timezone: America/Denver
