--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-    "title": "Clean Blog",
-    "name": "startbootstrap-clean-blog",
-    "version": "6.0.9",
-    "scripts": {
-        "build": "cross-env NODE_ENV=production node metalsmith",
-        "start": "cross-env NODE_ENV=development node metalsmith && serve -l 5000 dist",
-        "start:debug": "cross-env NODE_ENV=development DEBUG=* node metalsmith && serve -l 5000 dist"
-    },
-    "description": "Clean Blog is a Medium inspired blog theme for Bootstrap.",
-    "keywords": [
-        "css",
-        "sass",
-        "html",
-        "responsive",
-        "theme",
-        "template"
-    ],
-    "homepage": "https://startbootstrap.com/theme/clean-blog",
-    "bugs": {
-        "url": "https://github.com/StartBootstrap/startbootstrap-clean-blog/issues",
-        "email": "feedback@startbootstrap.com"
-    },
-    "license": "MIT",
-    "author": "Start Bootstrap",
-    "contributors": [
-        "David Miller (https://davidmiller.io/)"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/StartBootstrap/startbootstrap-clean-blog.git"
-    },
-    "dependencies": {
-        "bootstrap": "5.2.3"
-    },
-    "devDependencies": {
-        "@metalsmith/collections": "^1.2.1",
-        "@metalsmith/drafts": "^1.1.1",
-        "@metalsmith/layouts": "^2.4.0",
-        "@metalsmith/markdown": "^1.4.0",
-        "@metalsmith/postcss": "^5.0.0",
-        "@metalsmith/sass": "^1.0.0",
-        "autoprefixer": "10.4.14",
-        "browser-sync": "2.29.1",
-        "cross-env": "^7.0.3",
-        "cssnano": "^5.0.17",
-        "jstransformer-pug": "^0.4.0",
-        "metalsmith": "^2.4.2",
-        "postcss": "8.4.21",
-        "prettier": "2.8.6",
-        "serve": "^13.0.2"
-    }
+  "title": "Clean Blog",
+  "name": "startbootstrap-clean-blog",
+  "version": "6.0.9",
+  "type": "module",
+  "scripts": {
+    "start": "cross-env NODE_ENV=development DEBUG=@metalsmith* node metalsmith.js",
+    "build": "cross-env NODE_ENV=production node metalsmith.js",
+    "serve": "browser-sync start --server 'build'"
+  },
+  "description": "Clean Blog is a Medium inspired blog theme for Bootstrap.",
+  "keywords": [
+    "css",
+    "sass",
+    "html",
+    "responsive",
+    "theme",
+    "template"
+  ],
+  "homepage": "https://startbootstrap.com/theme/clean-blog",
+  "bugs": {
+    "url": "https://github.com/StartBootstrap/startbootstrap-clean-blog/issues",
+    "email": "feedback@startbootstrap.com"
+  },
+  "license": "MIT",
+  "author": "Start Bootstrap",
+  "contributors": [
+    "David Miller (https://davidmiller.io/)"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/StartBootstrap/startbootstrap-clean-blog.git"
+  },
+  "dependencies": {
+    "bootstrap": "5.3.2"
+  },
+  "devDependencies": {
+    "@metalsmith/collections": "^1.3.0",
+    "@metalsmith/drafts": "^1.3.0",
+    "@metalsmith/layouts": "^2.7.0",
+    "@metalsmith/markdown": "^1.10.0",
+    "@metalsmith/postcss": "^5.4.1",
+    "@metalsmith/sass": "^1.8.1",
+    "autoprefixer": "10.4.17",
+    "browser-sync": "3.0.2",
+    "cross-env": "^7.0.3",
+    "cssnano": "^6.0.3",
+    "jstransformer-pug": "^0.4.0",
+    "metalsmith": "^2.6.2",
+    "postcss": "8.4.33",
+    "prettier": "3.2.4",
+    "serve": "^14.2.1"
+  }
 }
